main.css
html {
    font-family: sans-serif;
}

body {
    background-color: #000000;
}

.scene {
    margin: 50px auto;
    padding: 10px;
    width: 500px;
    height: 200px;

    background-image: url("http://allroundnews.com/wp-content/uploads/2012/02/seamless-wood-texture-free-5.jpg");
    background-repeat: repeat-x;

    perspective: 600px;
}

.album {
    display: inline-block;
    position: relative;
    width: 16px;
    height: 200px;
    overflow: visible;

    transform-style: preserve-3d;

    transform: rotateY(90deg);

    transition: transform 0.5s, width 0.5s;
}

.album:hover {
    width: 25px;
    transform: rotateY(90deg) translate3d(-30px, 0, 0);
    cursor: pointer;
}

.album.active {
    transform: rotateY(0deg) translate3d(0, 0, 10px);
    width: 200px;
}

.album.active:hover {
    transform: rotateY(0deg) translate3d(0, 0, 30px);
    cursor: pointer;
}

.album > .spine {
    position: absolute;
    width: 20px;
    height: 100%;
    background-color: rgba(255,0,0,1);

    transform: rotateY(-90deg) translate3d(0, 0, 10px);
}

.album > .spine > .label {
    width: 200px;
    height: 20px;
    vertical-align: middle;
    font-size: 11px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;

    transform-origin: 0% 25%;
    transform: rotateZ(90deg) translate(0, -50%);
}

.album > img {
    position: absolute;
    width: 200px;
    height: 100%;
    object-fit: cover;

    transform: translate3d(0, 0, 10px);
}

.album > .back {
    position: absolute;
    width: 100%;
    height: 100%;
    transform: rotateY(180deg) translate3d(0, 0, 10px);

    background-color: rgba(0,0,0,0);
}

